--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/classfield
 spring.datasource.username=root
 spring.datasource.password=Abhi@2446
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.format-sql= true
 spring.application.name=Ecommerce Application
 spring.main.allow-circular-references=true
